--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -14,6 +14,17 @@
     </div>
 {% endrow %}
 
+
+{% if post.author.profile %}
+    {% row %}
+        {% col %}
+            <h4>About the author</h4>
+            <p>{{ post.author.profile.bio }}</p>
+        {% endcol %}
+    {% endrow %}
+{% endif %}
+
+
 <!-- existing code here -->
 {% include "blog/post-comments.html" %}
 
